<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LogInActivity"
    android:padding="16dp"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:src="@drawable/main_logo"
            android:padding="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            style="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_desc"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/loginEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailHint"
            android:drawableLeft="@drawable/ic_person_24px"
            android:drawablePadding="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint"
            android:drawableLeft="@drawable/ic_lock_24px"
            android:drawablePadding="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log In"
            style="@style/AccentButtonStyle"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="logIn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_message"
            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:textAlignment="center"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            style="@style/DarkButtonStyle"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="signUp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>