<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_icon_write"
        android:padding="16dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/hometxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Escribe"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:textAlignment="center"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/writeTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/story_title"
            android:inputType="text"/>

        <EditText
            android:id="@+id/writeDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/story_description"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_header"
            style="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"/>

        <Spinner
            android:id="@+id/categoriesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/publishStoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/accent_button_background"
            android:text="PUBLISH"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>